<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/world_imageButton"
        android:layout_width="380dp"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/description_worldMap"
        android:cropToPadding="false"
        android:elevation="8dp"
        android:padding="0dp"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/world_image_button" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="9dp"
        android:text="@string/world"
        android:textColor="@color/colorTextHighEmphasis"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/world_imageButton"
        app:layout_constraintStart_toStartOf="@+id/world_imageButton"
        tools:text="World" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="9dp"
        android:text="@string/brazil"
        android:textColor="@color/colorTextHighEmphasis"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/brazil_imageButton"
        app:layout_constraintStart_toStartOf="@+id/brazil_imageButton"
        tools:text="Brazil" />

    <ImageButton
        android:id="@+id/brazil_imageButton"
        android:layout_width="380dp"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/description_brazilMap"
        android:cropToPadding="false"
        android:elevation="8dp"
        android:padding="0dp"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/world_imageButton"
        app:srcCompat="@drawable/brazil_image_button" />

</androidx.constraintlayout.widget.ConstraintLayout>